# STAPpp

./: .clang-format  .gitattributes  .gitignore  .travis.yml  README.md  pardiso_ooc.cfg
calc/: tri.nb
data/: accurate.json  run-patch.py  verify.py
data/3T/: calcErr.py  genDat.py  plot.py  run-patch.py  run-rate.py  verify.py
data/4Q/: calcErr.py  genDat.py  plot.py  run-patch.py  run-rate.py  verify.py
data/8H/: run-patch.py  verify.py
data/Beam/: verify.py
data/TimoEBMOD/: verify.py
data/TimoSRINT/: verify.py
data/plate/: verify.py
data/shell/: shell_patch_test.out  verify.py
doc/finalReport/: .gitignore  8H+sketch.eps  Descrip+STAPpp+vonMises.eps  MAIN.tex  MAIN.tex.bak  MAIN.xdv  STAPpp+sym.eps  Timo+EBMOD_PATCH_F.eps  Timo+SRINT_CONV_F.eps  Timo+SRINT_CONV_M.eps  Timo+SRINT_F_0.eps  Timo+example.eps  modalex.eps  post+order1.eps  report.tex
doc/finalReport/appendix/: assignment.tex  inputfile.tex  opt.tex  (+1 more)
memo/: 4Q.md  4Q2d23d.nb  4Q2d23d.py  4Q验证.nb
memo/3T/: 2d23d.py  3T.md  3T.nb  3T.py
memo/4Q/: 4Q-calc-stress.py  4Q-form-ke.py  4Q.md  4Q.nb
memo/MKL_solver/: solver.md
memo/frustum/: draw_frustum.m  frustum.m
memo/plate/: Untitledcheck.m  Untitledv2.m  directions.m  outputstress2.m
memo/plate_formula/: cdir_2d.m  outputstress.m  outputstress2.asv
memo/preprocessing/: inp.md  optimize.md
plate_formula/: Kmat2.docx  Untitled.m  Untitledv2.m  directions.asv  directions.m  newint.txt  newint2.txt  outputstress.m  outputstress2.m  readme.txt  record.txt  record2.txt  record3.txt  rect001.txt  rect002.txt  rectstresses.txt  stresses.txt  stresses2.txt  stresses3.txt  vecpos.asv  vecpos.m  新刚度矩阵.docx  新应力计算.docx  新建 Microsoft Office Word 文档 (2).docx  新建 Microsoft Office Word 文档 (3).docx  新建 Microsoft Office Word 文档.docx
src/: CMakeLists.txt
src/cpp/: Clock.cpp  Domain.cpp  Element.cpp  ElementGroup.cpp  Material.cpp  Node.cpp  Outputter.cpp  PostOutputter.cpp  SPR8H.cpp  Solver.cpp  main.cpp
src/cpp/Elements/: 5Q.cpp  8H.cpp  9Q.cpp  Bar.cpp  Beam.cpp  Frustum.cpp  Infinite_4Q.cpp  Plate.cpp  Quadrilateral.cpp  Shell.cpp  TimoshenkoEBMOD.cpp  TimoshenkoSRINT.cpp  Triangle.cpp
src/h/: CSRMatrix.h  Clock.h  Domain.h  Element.h  ElementGroup.h  Material.h  Node.h  Outputter.h  PostOutputter.h  SPR8H.h  SkylineMatrix.h  Solver.h  SparseMatrix.h  matrix.h  stdafx.h
src/h/Elements/: 5Q.h  8H.h  9Q.h  Bar.h  Beam.h  Frustum.h  Infinite_4Q.h  Plate.h  Quadrilateral.h  Quadrilaterial.h  Shell.h  TimoshenkoEBMOD.h  TimoshenkoSRINT.h  Triangle.h
src/preprocessing/: .gitignore  ABAQUS.py  ABAQUSCalc.py  ABAQUSparser.py  ABAUQSCalc.py  STAPpp.py  element.py  load.py  main.py  material.py  node.py  outputter.py  parser.py  test.py  testParse.py
src/preprocessing/Node/: __init__.py
src/preprocessing/Output/: __init__.py  ouputter.py
src/preprocessing/Parse/: parser.py
src/preprocessing/ProgressBar/: __init__.py
src/preprocessing/test/: plotForce.py
test/: installMKL.py  test.bat  test.py
(+97 files in other folders)
