PROJECT(stap++)

cmake_minimum_required(VERSION 3.0)

OPTION(STAP++_DEBUG "Output detailed results for debugging." OFF)
IF(STAP++_DEBUG)
   ADD_DEFINITIONS(-D_DEBUG_)
ENDIF()

INCLUDE_DIRECTORIES(h)
INCLUDE_DIRECTORIES(h/Elements)

AUX_SOURCE_DIRECTORY(cpp SRC)
AUX_SOURCE_DIRECTORY(cpp/Elements SRC_ELEMENTS)
FILE(GLOB_RECURSE HEAD h/*.h)

source_group(SOURCE\ FILES FILES ${SRC})
source_group(SOURCE\ FILES FILES ${SRC_ELEMENTS})
source_group(HEADER\ FILES FILES ${HEAD})

ADD_EXECUTABLE(stap++ ${SRC} ${SRC_ELEMENTS} ${HEAD})
